; ModuleID = '/home/carl/AnghaBench/freebsd/sys/opencrypto/extr_cryptodev.c_csefree.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/opencrypto/extr_cryptodev.c_csefree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.csession = type { %struct.csession*, %struct.csession*, i32, i32 }

@M_XDATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.csession*)* @csefree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @csefree(%struct.csession* %0) #0 {
  %2 = alloca %struct.csession*, align 8
  store %struct.csession* %0, %struct.csession** %2, align 8
  %3 = load %struct.csession*, %struct.csession** %2, align 8
  %4 = getelementptr inbounds %struct.csession, %struct.csession* %3, i32 0, i32 3
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @crypto_freesession(i32 %5)
  %7 = load %struct.csession*, %struct.csession** %2, align 8
  %8 = getelementptr inbounds %struct.csession, %struct.csession* %7, i32 0, i32 2
  %9 = call i32 @mtx_destroy(i32* %8)
  %10 = load %struct.csession*, %struct.csession** %2, align 8
  %11 = getelementptr inbounds %struct.csession, %struct.csession* %10, i32 0, i32 1
  %12 = load %struct.csession*, %struct.csession** %11, align 8
  %13 = icmp ne %struct.csession* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %1
  %15 = load %struct.csession*, %struct.csession** %2, align 8
  %16 = getelementptr inbounds %struct.csession, %struct.csession* %15, i32 0, i32 1
  %17 = load %struct.csession*, %struct.csession** %16, align 8
  %18 = load i32, i32* @M_XDATA, align 4
  %19 = call i32 @free(%struct.csession* %17, i32 %18)
  br label %20

20:                                               ; preds = %14, %1
  %21 = load %struct.csession*, %struct.csession** %2, align 8
  %22 = getelementptr inbounds %struct.csession, %struct.csession* %21, i32 0, i32 0
  %23 = load %struct.csession*, %struct.csession** %22, align 8
  %24 = icmp ne %struct.csession* %23, null
  br i1 %24, label %25, label %31

25:                                               ; preds = %20
  %26 = load %struct.csession*, %struct.csession** %2, align 8
  %27 = getelementptr inbounds %struct.csession, %struct.csession* %26, i32 0, i32 0
  %28 = load %struct.csession*, %struct.csession** %27, align 8
  %29 = load i32, i32* @M_XDATA, align 4
  %30 = call i32 @free(%struct.csession* %28, i32 %29)
  br label %31

31:                                               ; preds = %25, %20
  %32 = load %struct.csession*, %struct.csession** %2, align 8
  %33 = load i32, i32* @M_XDATA, align 4
  %34 = call i32 @free(%struct.csession* %32, i32 %33)
  ret void
}

declare dso_local i32 @crypto_freesession(i32) #1

declare dso_local i32 @mtx_destroy(i32*) #1

declare dso_local i32 @free(%struct.csession*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
